@startuml

title __RENDER's Class Diagram__\n

  namespace nz.ac.vuw.ecs.swen225.gp20.render {
    class nz.ac.vuw.ecs.swen225.gp20.render.AudioPlayer {
        - currentClip : Clip
        - currentPriority : int
        - finishedPlay : boolean
        + playAudio()
        + update()
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.render {
    class nz.ac.vuw.ecs.swen225.gp20.render.Board {
        + loadedSounds : HashMap<String, SoundEffect>
        - autoActors : ArrayList<AutoActor>
        - deathTick : int
        - halfFrame : boolean
        - inAnimation : boolean
        - inventorySize : int
        - lastVision : Tile[][]
        - playerMoved : boolean
        {static} - reach : int
        {static} - sleepTime : int
        - taskSize : int
        {static} - tileSize : int
        - timer : Timer
        - vision : Tile[][]
        {static} - visionRange : int
        - walkedOnDoors : Set<Tile>
        + Board()
        + actionPerformed()
        + actorInVision()
        + draw()
        + getOffsetX()
        + getOffsetY()
        + isAnimating()
        + setAnimateSpeed()
        + toString()
        + updateLevel()
        # paintComponent()
        - drawEntities()
        - drawTiles()
        - getVisionX()
        - getVisionY()
        - playSound()
        - setVision()
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.render {
    enum SoundEffects {
      airlock
      conveyor_slide
      death
      finish_level
      metalWalk_0
      metalWalk_1
      pickup_item
      slide
      waterSwim_0
      waterSwim_1
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.render {
    class nz.ac.vuw.ecs.swen225.gp20.render.SoundEffect {
        - clip : Clip
        - name : String
        + SoundEffect()
        + getClip()
        + getName()
    }
  }
  

  nz.ac.vuw.ecs.swen225.gp20.render.AudioPlayer .up.|> javax.sound.sampled.LineListener
  nz.ac.vuw.ecs.swen225.gp20.render.Board .up.|> java.awt.event.ActionListener
  nz.ac.vuw.ecs.swen225.gp20.render.Board -up-|> javax.swing.JPanel
  nz.ac.vuw.ecs.swen225.gp20.render.Board o-- nz.ac.vuw.ecs.swen225.gp20.render.AudioPlayer : audioPlayer
  nz.ac.vuw.ecs.swen225.gp20.render.Board o-- nz.ac.vuw.ecs.swen225.gp20.maze.Maze : maze
  nz.ac.vuw.ecs.swen225.gp20.render.Board o-- nz.ac.vuw.ecs.swen225.gp20.maze.actors.Player : player
  nz.ac.vuw.ecs.swen225.gp20.render.Board +-down- nz.ac.vuw.ecs.swen225.gp20.render.Board.SoundEffects


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
